# deal-closah

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  interfaces.py  pyproject.toml  schemas.py  server.py
agentkit/: llm.py
agents/: __init__.py  deck_builder.py  icp_scout.py  meeting_intel.py  orchestrator.py  outreach.py
app/: README.md  app.js  index.html  styles.css
docs/: ADLC.md  MODEL_SELECTION.md
evals/deck/: evals.json
evals/icp/: agent.py  evals.json
evals/icp/evals/: benchmark.json  evals.json
evals/meeting/: evals.json
evals/outreach/: agent.py  evals.json
evals/outreach/evals/: benchmark.json  evals.json
fixtures/: crunchbase_sample.json  events_sample.json
skills/cold-email/: SKILL.md
skills/event-scout/: SKILL.md
skills/icp-profile/: SKILL.md
skills/meeting-brief/: SKILL.md
skills/pitch-deck/: SKILL.md
skills/pitch-deck/assets/webapp/: app.js  index.html  server.py  styles.css
