[project]
name = "deal-closah"
version = "0.1.0"
description = "Sales & GTM multi-agent system — TOA Agent Build Day 2026"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dateutil>=2.9",
    "beautifulsoup4>=4.12",
    "skills-ref>=0.1",
    "tqdm>=4.0",
]

[project.optional-dependencies]
pptx = ["python-pptx>=0.6"]
calendar = ["icalendar>=5.0", "google-api-python-client>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentkit", "agents"]
